package org.example.PagosECommerce;

public class AppEcommerce {

    public static void main(String[] args) {

        Tienda.startPayment();

    }

}
